--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a user Story app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,6 @@
     "mongoose": "^4.0.2",
     "morgan": "^1.5.3",
     "nodemon": "^1.3.7"
-  }
+  },
+  "devDependencies": {}
 }
